# htoml

./: .ghci  .gitignore  .travis.yml  .travis_long.sh  CHANGES.md  README.md  example.toml  htoml.cabal  toml.cabal
benchmarks/: Benchmarks.hs  example.toml  repeated.toml
benchmarks/results/: attoparsec-less-manys.html  attoparsec-more-manys.html  parsec-0.html
src/Text/: TOML.hs  Toml.hs
src/Text/TOML/: Parser.hs  Value.hs
src/Text/Toml/: Parser.hs  Pretty.hs  Types.hs
src/Text/Toml/Json/: BurntSushi.hs  Standard.hs
test/: BurntSushi.hs  Test.hs
test/BurntSushi/: fetch-toml-tests.sh
test/BurntSushi/valid/: key-space.toml  key-special-chars.toml  multiline-string.toml
test/Text/TOML/Parser/: Spec.hs
test/Text/Toml/Parser/: Spec.hs
