name:                   htoml
version:                0.1.0.0
synopsis:               A parser for TOML files.
description:            TOML is a obvious and minimal format for config files.
                        .
                        This package provides a TOML parser,
                        build with the Parsec library of parser combinators.
                        .
                        It provides a JSON interface using the Aeson library.
homepage:               https://github.com/cies/htoml
bug-reports:            https://github.com/cies/htoml/issues
license:                BSD3
license-file:           LICENSE
author:                 Cies Breijs
maintainer:             Cies Breijs
category:               Text
build-type:             Simple
cabal-version:          >= 1.10
extra-source-files:     README.md
                        , test/BurntSushi/fetch-toml-tests.sh
                        , test/BurntSushi/valid/*.toml
                        , test/BurntSushi/valid/*.json
                        , test/BurntSushi/invalid/*.toml
                        , benchmarks/example.toml
                        , benchmarks/repeated.toml


source-repository       head
  type:                 git
  location:             https://github.com/cies/htoml.git

library
  exposed-modules:      Text.Toml
                        , Text.Toml.Parser
                        , Text.Toml.Types
  ghc-options:          -Wall
  hs-source-dirs:       src
  default-language:     Haskell2010
  build-depends:        base             >= 4.6  && < 5
                        , parsec         >= 3.1.5
                        , containers     >= 0.5  && < 0.6
                        , unordered-containers
                        , vector
                        , aeson
                        , text
                        , time           -any
                        , old-locale     -any

executable tests
  hs-source-dirs:       test
  ghc-options:          -Wall
  main-is:              Test.hs
  other-modules:        BurntSushi
                        , BurntSushi
                        , Text.Toml.Parser.Spec
  default-language:     Haskell2010
  build-depends:        base             >= 4.6  && < 5
                        , parsec         >= 3.1.5
                        , containers     >= 0.5  && < 0.6
                        , bytestring
                        , file-embed
                        , unordered-containers
                        , vector
                        , aeson
                        , text
                        , time           -any
                        , Cabal          >= 1.16.0
                        , htoml
                        , tasty
                        , tasty-hspec
                        , tasty-hunit

test-suite Tests
  hs-source-dirs:       test
  ghc-options:          -Wall
  main-is:              Test.hs
  other-modules:        BurntSushi
                        , BurntSushi
                        , Text.Toml.Parser.Spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  build-depends:        base             >= 4.6  && < 5
                        , parsec         >= 3.1.5
                        , containers     >= 0.5  && < 0.6
                        , bytestring
                        , file-embed
                        , unordered-containers
                        , vector
                        , text
                        , time           -any
                        , Cabal          >= 1.16.0
                        , htoml
                        , tasty
                        , tasty-hspec
                        , tasty-hunit

benchmark benchmarks
  hs-source-dirs:       benchmarks .
  ghc-options:          -O2 -Wall -rtsopts
  main-is:              Benchmarks.hs
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  build-depends:        base             >= 4.6  && < 5
                        , parsec         >= 3.1.5
                        , containers     >= 0.5  && < 0.6
                        , unordered-containers
                        , vector
                        , aeson
                        , text
                        , time           -any
                        , Cabal          >= 1.16.0
                        , htoml
                        , criterion
