name:              toml
version:           0.2.0.0
synopsis:          Toml is an obvious and minimal configuration file format.
description:       This version of uses Attoparsec, but soon we will likely switch to Parsec.
homepage:          https://github.com/seliopou/toml
license:           BSD3
license-file:      LICENSE
author:            Spiros Eliopoulos, Cies Breijs
category:          Text
build-type:        Simple
cabal-version:     >= 1.10

library
  exposed-modules:      Text.Toml
                        , Text.Toml.Parser
                        , Text.Toml.Types
  hs-source-dirs:       src
  default-language:     Haskell2010
  build-depends:        base             >= 4.6  && < 5
                        , attoparsec     >= 0.10 && < 0.13
                        , containers     >= 0.5  && < 0.6
                        , text
                        , time           -any
                        , old-locale     -any

executable test-toml
  hs-source-dirs:       test
  ghc-options:          -Wall
  main-is:              Test.hs
  default-language:     Haskell2010
  build-depends:        base             >= 4.6  && < 5
                        , attoparsec     >= 0.10 && < 0.13
                        , containers     >= 0.5  && < 0.6
                        , text
                        , time           -any
                        , Cabal          >= 1.16.0
                        , toml
                        , tasty
                        , tasty-hspec

test-suite Tests
  hs-source-dirs:       test
  ghc-options:          -Wall
  main-is:              Test.hs
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  build-depends:        base             >= 4.6  && < 5
                        , attoparsec     >= 0.10 && < 0.13
                        , containers     >= 0.5  && < 0.6
                        , text
                        , time           -any
                        , Cabal          >= 1.16.0
                        , toml
                        , tasty
                        , tasty-hspec

benchmark benchmarks
  hs-source-dirs:       benchmarks .
  ghc-options:          -O2 -Wall -rtsopts
  main-is:              Benchmarks.hs
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  build-depends:        base             >= 4.6  && < 5
                        , attoparsec     >= 0.10 && < 0.13
                        , containers     >= 0.5  && < 0.6
                        , text
                        , time           -any
                        , Cabal          >= 1.16.0
                        , toml
                        , criterion
