name:              toml
version:           0.4.0.0
synopsis:          A parser for TOML files.
description:       TOML is a obvious and minimal format for config files.
                   This package provides a TOML parser,
                   build with the Parsec library of parser combinators.
                   It provides a JSON interface using the Aeson library.
homepage:          https://github.com/seliopou/toml
license:           BSD3
license-file:      LICENSE
author:            Spiros Eliopoulos, Cies Breijs
category:          Text
build-type:        Simple
cabal-version:     >= 1.10

library
  exposed-modules:      Text.Toml
                        , Text.Toml.Parser
                        , Text.Toml.Types
                        , Text.Toml.Json.Standard
                        , Text.Toml.Json.BurntSushi
  hs-source-dirs:       src
  default-language:     Haskell2010
  build-depends:        base             >= 4.6  && < 5
                        , parsec         >= 3.1.5
                        , containers     >= 0.5  && < 0.6
                        , unordered-containers
                        , aeson
                        , text
                        , time           -any
                        , old-locale     -any

executable test-toml
  hs-source-dirs:       test
  ghc-options:          -Wall
  main-is:              Test.hs
  default-language:     Haskell2010
  build-depends:        base             >= 4.6  && < 5
                        , parsec         >= 3.1.5
                        , containers     >= 0.5  && < 0.6
                        , bytestring
                        , file-embed
                        , unordered-containers
                        , aeson
                        , text
                        , time           -any
                        , Cabal          >= 1.16.0
                        , toml
                        , tasty
                        , tasty-hspec
                        , tasty-hunit

test-suite Tests
  hs-source-dirs:       test
  ghc-options:          -Wall
  main-is:              Test.hs
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  build-depends:        base             >= 4.6  && < 5
                        , parsec         >= 3.1.5
                        , containers     >= 0.5  && < 0.6
                        , bytestring
                        , file-embed
                        , unordered-containers
                        , vector
                        , text
                        , time           -any
                        , Cabal          >= 1.16.0
                        , toml
                        , tasty
                        , tasty-hspec
                        , tasty-hunit

benchmark benchmarks
  hs-source-dirs:       benchmarks .
  ghc-options:          -O2 -Wall -rtsopts
  main-is:              Benchmarks.hs
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  build-depends:        base             >= 4.6  && < 5
                        , parsec         >= 3.1.5
                        , containers     >= 0.5  && < 0.6
                        , unordered-containers
                        , aeson
                        , text
                        , time           -any
                        , Cabal          >= 1.16.0
                        , toml
                        , criterion
